update 为AppiumDriverLocalService 启动appium 服务，放弃使用终端